# timesformer

./: README.md  pyproject.toml  test.py
datasets/: augmentation.py  hmdb3_dataset.py
models/: attention.py  drop_path.py  embedding.py  encoder.py  mlp.py  timesformer.py
tools/: train.py
